--- a/style.css
+++ b/style.css
@@ -2528,6 +2528,18 @@ ul.touch li{
     margin-top: 35px;
     position: relative;
 }
+
+.table-head h3 {
+    font-size: 25px;
+    color: rgba(0, 0, 0, 0.5);
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+    margin-bottom: 30px;
+    z-index: 2;
+    margin-top: 35px;
+    position: relative;
+}
+
 .table-body ul li{
     font-size: 18px;
     color: #666666;
