--- a/style.css
+++ b/style.css
@@ -813,6 +813,7 @@ textarea {
 /* Navbar styling */
 
 nav {
+    display :flex;
     background-color: #333; /* Warna latar belakang navbar */
     height: 80px; /* Tinggi navbar */
     padding: 20px; /* Padding untuk konten dalam navbar */
@@ -2478,7 +2479,7 @@ ul.touch li{
 /*  14. Table Area
 /*----------------------------------------*/
 .single-pricing-tabel{
-    background-image: url(img/banner/table.jpg);
+    background-image: url(img/banner/vio.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -2499,7 +2500,7 @@ ul.touch li{
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, .95);
+    background: rgba(255, 255, 255, 0.95);
     content: "";
     z-index: 1;
     border-radius: 45px;
